feat(root): add @bitgo/logger with sensitive data sanitization
Created @bitgo/logger package that automatically sanitizes sensitive data
(tokens, private keys, passwords) in test/staging environments.

Changes:
- Added logger to 5 modules: express, sdk-coin-apt, sdk-coin-sol, sdk-coin-vet, blockapis
- Replaced 17 console.error/log statements with logger calls
- Sanitizes keys: token, bearer, prv, xprv, privateKey, password, otp
- Works recursively on nested objects/arrays

TICKET: WP-7503

--- a/modules/blockapis/package.json
+++ b/modules/blockapis/package.json
@@ -22,6 +22,7 @@
     "directory": "modules/blockapis"
   },
   "dependencies": {
+    "@bitgo/logger": "^1.0.0",
     "@bitgo/utxo-lib": "^11.20.0",
     "@types/superagent": "4.1.16",
     "superagent": "^9.0.1"
