--- a/modules/express/package.json
+++ b/modules/express/package.json
@@ -40,6 +40,7 @@
     "@api-ts/io-ts-http": "^3.2.1",
     "@api-ts/typed-express-router": "2.0.0",
     "@bitgo/abstract-lightning": "^7.7.0",
+    "@bitgo/logger": "^1.0.0",
     "@bitgo/sdk-core": "^36.30.0",
     "@bitgo/utxo-lib": "^11.20.0",
     "@types/proxyquire": "^1.3.31",
