feat(abstract-utxo): update check-fmt command path pattern
Update the check-fmt script to use a more specific path pattern that
targets only src and test directories, rather than checking all files.

The step can freeze up otherwise.

Issue: BTC-2650

Co-authored-by: llm-git <llm-git@ttll.de>

--- a/modules/abstract-utxo/package.json
+++ b/modules/abstract-utxo/package.json
@@ -27,7 +27,7 @@
     "build:cjs": "yarn tsc --build --incremental --verbose .",
     "build:esm": "yarn tsc --project tsconfig.esm.json",
     "fmt": "prettier --write .",
-    "check-fmt": "prettier --check '**/*.{ts,js,json}'",
+    "check-fmt": "prettier --check '{src,test}/**/*.{ts,js,json}'",
     "clean": "rm -rf ./dist",
     "lint": "eslint --quiet .",
     "prepare": "npm run build",
