--- a/modules/sdk-coin-irys/package.json
+++ b/modules/sdk-coin-irys/package.json
@@ -53,7 +53,11 @@
     "@bitgo/sdk-api": "^1.73.4",
     "@bitgo/sdk-test": "^9.1.25",
     "@types/keccak": "^3.0.5",
-    "@types/superagent": "^8.1.0"
+    "@types/sinon": "^10.0.11",
+    "@types/superagent": "^8.1.0",
+    "nock": "^13.3.1",
+    "should": "^13.2.3",
+    "sinon": "^13.0.1"
   },
   "files": [
     "dist"
