--- a/modules/bitgo/tsconfig.json
+++ b/modules/bitgo/tsconfig.json
@@ -183,6 +183,9 @@
       "path": "../sdk-coin-iota"
     },
     {
+      "path": "../sdk-coin-irys"
+    },
+    {
       "path": "../sdk-coin-islm"
     },
     {
