--- a/modules/sdk-coin-irys/package.json
+++ b/modules/sdk-coin-irys/package.json
@@ -40,12 +40,18 @@
     ]
   },
   "dependencies": {
+    "@bitgo/abstract-eth": "^24.20.0",
+    "@bitgo/sdk-core": "^36.30.0",
+    "@bitgo/statics": "^58.24.0",
+    "@ethereumjs/common": "^2.6.5",
     "@ethereumjs/rlp": "^4.0.0",
     "bs58": "^4.0.1",
     "ethers": "^5.1.3",
     "superagent": "^9.0.1"
   },
   "devDependencies": {
+    "@bitgo/sdk-api": "^1.73.4",
+    "@bitgo/sdk-test": "^9.1.25",
     "@types/sinon": "^10.0.11",
     "@types/superagent": "^8.1.0",
     "nock": "^13.3.1",
