--- a/modules/sdk-coin-irys/tsconfig.json
+++ b/modules/sdk-coin-irys/tsconfig.json
@@ -9,5 +9,11 @@
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules"],
-  "references": []
+  "references": [
+    { "path": "../abstract-eth" },
+    { "path": "../sdk-core" },
+    { "path": "../statics" },
+    { "path": "../sdk-api" },
+    { "path": "../sdk-test" }
+  ]
 }
