fix(sdk-coin-irys): remove unused dependencies
Remove declared but unused dependencies flagged by CI:
- dependencies: @bitgo/abstract-eth, @bitgo/sdk-core, @bitgo/statics, keccak
- devDependencies: @bitgo/sdk-api, @bitgo/sdk-test, @types/keccak
- tsconfig references for removed packages

Ticket: SC-5417

--- a/modules/sdk-coin-irys/tsconfig.json
+++ b/modules/sdk-coin-irys/tsconfig.json
@@ -9,18 +9,5 @@
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules"],
-  "references": [
-    {
-      "path": "../abstract-eth"
-    },
-    {
-      "path": "../sdk-core"
-    },
-    {
-      "path": "../statics"
-    },
-    {
-      "path": "../sdk-test"
-    }
-  ]
+  "references": []
 }
