feat: use zod for sendMany params validation
Add Zod schema (SendManyOptionsSchema) to validate sendMany parameters
in sdk-core wallet. Replace deprecated common.validateParams call with
Zod-based validation using .parse() with .passthrough() to allow
additional properties from parent interfaces.

- Add zod dependency to sdk-core/package.json
- Add SendManyOptionsSchema and supporting schemas in iWallet.ts
- Replace common.validateParams with SendManyOptionsSchema.parse in wallet.ts

BTC-3029

--- a/modules/sdk-core/package.json
+++ b/modules/sdk-core/package.json
@@ -69,7 +69,8 @@
     "strip-hex-prefix": "^1.0.0",
     "superagent": "^9.0.1",
     "tweetnacl": "^1.0.3",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@bitgo/sdk-opensslbytes": "^2.1.0",
