--- a/package.json
+++ b/package.json
@@ -94,6 +94,9 @@
     "socks": "2.7.3",
     "web3-utils": "4.2.1",
     "@polkadot/api": "14.1.1",
+    "@polkadot/util": "13.5.6",
+    "@polkadot/util-crypto": "13.5.6",
+    "@polkadot/keyring": "13.5.6",
     "elliptic": "^6.6.1",
     "cookie": "^0.7.1",
     "axios": "^1.13.0",
