--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "https-browserify": "^1.0.0",
     "husky": "^8.0.1",
     "improved-yarn-audit": "^3.0.0",
-    "lerna": "^9.0.0",
+    "lerna": "^9.0.4",
     "lint-staged": "^12.4.1",
     "make-dir": "^3.1.0",
     "mocha": "10.6.0",
@@ -58,7 +58,7 @@
     "webpack": "5.98.0",
     "webpack-cli": "^5.0.0",
     "yargs": "^17.7.2",
-    "yeoman-generator": "^5.6.1"
+    "yeoman-generator": "^7.5.1"
   },
   "resolutions": {
     "qs": "6.14.1",
@@ -108,7 +108,9 @@
     "**/avalanche/**/ws": "8.18.3",
     "**/ethers/**/ws": "7.5.10",
     "**/swarm-js/**/ws": "5.2.4",
-    "**/swarm-js/**/tar": "6.2.1",
+    "**/swarm-js/**/tar": "7.5.7",
+    "lerna/**/tar": "7.5.7",
+    "tar": "7.5.7",
     "serialize-javascript": "^6.0.2",
     "@grpc/grpc-js": "^1.12.6",
     "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10",
@@ -159,9 +161,10 @@
   },
   "dependencies": {
     "axios": "^1.13.0",
+    "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10",
+    "tar": "7.5.7",
     "terser": "^5.14.2",
-    "tmp": "^0.2.3",
-    "bigint-buffer": "npm:@trufflesuite/bigint-buffer@1.1.10"
+    "tmp": "^0.2.3"
   },
   "packageManager": "yarn@1.22.22"
 }
