chore: address audit findings
TICKET: WP-7983

--- a/modules/key-card/package.json
+++ b/modules/key-card/package.json
@@ -36,7 +36,7 @@
     "@bitgo/sdk-api": "^1.74.1",
     "@bitgo/sdk-core": "^36.31.1",
     "@bitgo/statics": "^58.25.0",
-    "jspdf": "^4.1.0",
+    "jspdf": ">=4.2.0",
     "qrcode": "^1.5.1"
   },
   "devDependencies": {
