--- a/.iyarc
+++ b/.iyarc
@@ -24,3 +24,9 @@ GHSA-34x7-hfp2-rc4v
 # - Our usage is dev-time tooling only (build, test, file search)
 # - Mitigated by controlled inputs (our own build scripts, not user-provided patterns)
 GHSA-3ppc-4f35-3m26
+
+# Excluded because:
+# - Transitive dependency through lerna and yeoman-generator requiring tar < 7.5.4
+# - This CVE affects tar's extraction process with specially crafted archives
+# - Our usage is limited to archive PACKING operations only, not extraction
+GHSA-83g3-92jg-28cx
