--- a/modules/babylonlabs-io-btc-staking-ts/package.json
+++ b/modules/babylonlabs-io-btc-staking-ts/package.json
@@ -10,6 +10,11 @@
     "import": "./dist/index.js",
     "require": "./dist/index.cjs"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/BitGo/BitGoJS.git",
+    "directory": "modules/babylonlabs-io-btc-staking-ts"
+  },
   "scripts": {
     "generate-types:cjs": "dts-bundle-generator -o ./dist/index.d.cts ./src/index.ts --no-check",
     "generate-types:esm": "dts-bundle-generator -o ./dist/index.d.ts ./src/index.ts --no-check",
