--- a/package.json
+++ b/package.json
@@ -118,7 +118,8 @@
     "memfs": "4.46.0",
     "**/iota-sdk/**/valibot": "1.2.0",
     "**/tronweb/**/validator": "13.15.23",
-    "@isaacs/brace-expansion": "5.0.1"
+    "@isaacs/brace-expansion": "5.0.1",
+    "basic-ftp": ">=5.2.0"
   },
   "workspaces": [
     "modules/*"
